# sdl-simple

./: .gitignore  CMakeLists.txt  README.md  game.xml  terrain.tmx
data/: tileset02.xcf
src/: AnimatedGraphic.cpp  AnimatedGraphic.h  Base64.cpp  Base64.h  BetweenLevelState.cpp  BetweenLevelState.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  InputHandler.cpp  InputHandler.h  Layer.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  MenuButton.cpp  MenuButton.h  MenuState.cpp  MenuState.h  ObjectLayer.cpp  ObjectLayer.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  SDLGameObject.cpp  SDLGameObject.h  (+9 more)
